--- a/AngularClient/index.html
+++ b/AngularClient/index.html
@@ -129,6 +129,7 @@
     <script src="scripts/angular.js"></script>
     <script src="Scripts/angular-resource.js"></script>
     <script src="Scripts/angular-cookies.js"></script>
+    <script src="Scripts/angular-route.js"></script>
     <script src="Scripts/Chart.js"></script>
     <script src="Scripts/angular-chart.js"></script>
 
