--- a/AngularClient/app/form/formListAdminView.html
+++ b/AngularClient/app/form/formListAdminView.html
@@ -1,6 +1,18 @@
 ﻿
 <div ng-controller="FormController as ctrl">
     <div class="panel panel-default">
+        <div class="panel-heading">Polls per page</div>
+        <div class="panel-body">
+            <select class="form-control" placeholder="Polls per page">
+                <option ng-click="ctrl.chosePerPage(1)">1</option>
+                <option ng-click="ctrl.chosePerPage(5)">5</option>
+                <option ng-click="ctrl.chosePerPage(10)">10</option>
+                <option ng-click="ctrl.chosePerPage(15)">15</option>
+                <option ng-click="ctrl.chosePerPage(20)">20</option>
+            </select>
+        </div>
+    </div>
+    <div class="panel panel-default">
         <div class="panel-heading">Search poll</div>
         <div class="panel-body">
             <label class="control-label col-sm-2">Search:</label>
@@ -45,4 +57,10 @@
             </table>
         </div>
     </div>
+    <nav>
+        <ul class="pager">
+            <li><a href="" ng-if="ctrl.Prev" ng-click="ctrl.chosePageNr(ctrl.page_nr - 1)">Previous page</a></li>
+            <li><a href="" ng-if="ctrl.Next" ng-click="ctrl.chosePageNr(ctrl.page_nr + 1)">Next page</a></li>
+        </ul>
+    </nav>
 </div>
