--- a/AngularClient/app/form/formListView.html
+++ b/AngularClient/app/form/formListView.html
@@ -1,11 +1,25 @@
 ﻿<div ng-controller="FormController as ctrl">
+
     <div class="panel panel-default">
+        <div class="panel-heading">Polls per page</div>
+        <div class="panel-body">
+            <select class="form-control" placeholder="Polls per page">
+                <option ng-click="ctrl.chosePerPage(1)">1</option>
+                <option ng-click="ctrl.chosePerPage(5)">5</option>
+                <option ng-click="ctrl.chosePerPage(10)">10</option>
+                <option ng-click="ctrl.chosePerPage(15)">15</option>
+                <option ng-click="ctrl.chosePerPage(20)">20</option>
+            </select>
+        </div>
+    </div>
+      
+     <div class="panel panel-default">
         <div class="panel-heading">Search poll</div>
         <div class="panel-body">
             <input type="text" ng-model="searchText" class="form-control" placeholder="Search">
         </div>
     </div>
-
+    
     <div ng-controller="FormVoteController as ctrlVote">
         <div ng-repeat="form in ctrl.forms | filter:searchText">
             <div class="panel panel-default">
@@ -41,5 +55,13 @@
             </div>
         </div>
     </div>
+
+    <nav>
+        <ul class="pager">
+            <li><a href="" ng-if="ctrl.Prev" ng-click="ctrl.chosePageNr(ctrl.page_nr - 1)">Previous page</a></li>
+            <li><a href="" ng-if="ctrl.Next" ng-click="ctrl.chosePageNr(ctrl.page_nr + 1)">Next page</a></li>
+        </ul>
+    </nav>
 </div>
+
 
