--- a/AngularClient/index.html
+++ b/AngularClient/index.html
@@ -6,6 +6,7 @@
     <title>Poll App</title>
 
     <!-- Style sheets -->
+    <script src="Scripts/jquery-2.2.1.js"></script>
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Content/sidebar.css" rel="stylesheet" />
     <link href="Content/angular-chart.css" rel="stylesheet" />
@@ -16,7 +17,13 @@
     <!-- Navbar -->
     <nav class="navbar navbar-default">
         <div class="container-fluid">
-            <div class="navbar-brand">Poll Application</div>
+            
+            <div class="mobileNav">
+                <button type="button" class="btn btn-default btn-lg desktopHidden glyphBtn">
+                    <span class="glyphicon glyphicon-th-list" aria-hidden="true" ng-click="vm.viewSideBar()"></span>
+                </button>
+                <div class="navbar-brand">Poll Application</div>
+            </div>
             <div class="nav navbar-nav navbar-right">
                 <form ng-hide="vm.isLoggedIn" class="navbar-form navbar-right">
 
@@ -28,11 +35,11 @@
                         <input type="password" class="form-control" placeholder="Password" ng-model="vm.userData.password" required>
                     </div>
 
-                    <button type="submit" class="btn btn-default" ng-click="vm.login()">Login</button>
+                    <button type="submit" class="btn btn-default" id="loginBtn" ng-click="vm.login()">Login</button>
 
                     <div ng-show="vm.messageLogIn" class="alert alert-danger" role="alert">{{vm.messageLogIn}}</div>
                 </form>
-                <ul class="nav navbar-nav" ng-if="vm.isLoggedIn">
+                <ul class="nav navbar-nav mobileHidden" ng-if="vm.isLoggedIn">
 
                     <li><p class="navbar-text">Hello, {{vm.userData.username}}</p></li>
                     <li><p class="navbar-text" ng-click="vm.logout()"><a href="">Logout</a></p></li>
@@ -73,9 +80,9 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group" id="registerBtn">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default" ng-click="vm.registerUser()">Register</button>
+                    <button type="submit" class="btn btn-default" id="loginBtn" ng-click="vm.registerUser()">Register</button>
                 </div>
             </div>
             <div ng-show="vm.messageFailedRegistration" class="alert alert-danger" role="alert">{{vm.messageFailedRegistration}}</div>
@@ -86,7 +93,7 @@
     <!-- Wrapper -->
     <div ng-if="vm.isLoggedIn" id="wrapper">
         <!-- sidebar -->
-        <div id="sidebar-wrapper">
+        <div id="sidebar-wrapper" class="mobileSideBarVisible">
             <ul class="sidebar-nav">
                 <li ng-click="vm.changePage('home')"><a href="/#">Home</a></li>
                 <li ng-click="vm.changePage('my_polls')"><a href="/#/my_polls">My polls</a></li>
@@ -158,3 +165,17 @@
 </body>
 
 </html>
+
+<script>
+
+    $(".glyphBtn").click(function () {
+        if ($(".mobileSideBarVisible").hasClass("sideBarHidden"))
+        {
+            $(".mobileSideBarVisible").removeClass("sideBarHidden");
+        }
+        else
+        {
+            $(".mobileSideBarVisible").addClass("sideBarHidden");
+        }
+    });
+</script>
