--- a/AngularClient/app/formUser/formListUsersFormsView.html
+++ b/AngularClient/app/formUser/formListUsersFormsView.html
@@ -1,4 +1,18 @@
 ﻿<div ng-controller="FormUserController as ctrl">
+
+    <div class="panel panel-default">
+        <div class="panel-heading">Polls per page</div>
+        <div class="panel-body">
+            <select class="form-control" placeholder="Polls per page">
+                <option ng-click="ctrl.chosePerPage(1)">1</option>
+                <option ng-click="ctrl.chosePerPage(5)">5</option>
+                <option ng-click="ctrl.chosePerPage(10)">10</option>
+                <option ng-click="ctrl.chosePerPage(15)">15</option>
+                <option ng-click="ctrl.chosePerPage(20)">20</option>
+            </select>
+        </div>
+    </div>
+
     <div class="panel panel-default">
         <div class="panel-heading">Search poll</div>
         <div class="panel-body">
@@ -10,11 +24,11 @@
        
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    User: {{ form.Username}}
+                    Author: {{ form.Username}}
                 </div>
                 <div class="panel-body">
                     <div class="col-sm-6 col-md-4">
-                        <h3>Title: {{ form.Title}}</h3>
+                        <h3>{{ form.Title}}</h3>
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <h5>Category: {{ form.Category }}</h5>
@@ -38,6 +52,11 @@
         </div>
     </div>
 
-   
+    <nav>
+        <ul class="pager">
+            <li><a href="" ng-if="ctrl.Prev" ng-click="ctrl.chosePageNr(ctrl.page_nr - 1)">Previous page</a></li>
+            <li><a href="" ng-if="ctrl.Next" ng-click="ctrl.chosePageNr(ctrl.page_nr + 1)">Next page</a></li>
+        </ul>
+    </nav>
 </div>
 
