--- a/AngularClient/app/formVoted/formVotedListView.html
+++ b/AngularClient/app/formVoted/formVotedListView.html
@@ -22,11 +22,11 @@
        <div ng-repeat="form in ctrl.forms | filter:searchText">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    User: {{ form.Username}}
+                    Author: {{ form.Username}}
                 </div>
                 <div class="panel-body">
                     <div class="col-sm-6 col-md-4">
-                        <h3>Title: {{ form.Title}}</h3>
+                        <h3>{{ form.Title}}</h3>
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <h5>Category: {{ form.Category }}</h5>
