--- a/AngularClient/app/user/userListView.html
+++ b/AngularClient/app/user/userListView.html
@@ -1,4 +1,17 @@
-<div ng-controller="UserController as vm">
+<div ng-controller="UserController as ctrl">
+    <div class="panel panel-default">
+        <div class="panel-heading">Polls per page</div>
+        <div class="panel-body">
+            <select class="form-control" placeholder="Polls per page">
+                <option ng-click="ctrl.chosePerPage(1)">1</option>
+                <option ng-click="ctrl.chosePerPage(5)">5</option>
+                <option ng-click="ctrl.chosePerPage(10)">10</option>
+                <option ng-click="ctrl.chosePerPage(15)">15</option>
+                <option ng-click="ctrl.chosePerPage(20)">20</option>
+            </select>
+        </div>
+    </div>
+
     <div class="panel panel-default">
         <div class="panel-heading">Search user</div>
         <div class="panel-body">
@@ -15,7 +28,7 @@
         <div class="panel-body">
             <table class="table">
                 <thead>
-                    <tr>
+                    <tr >
                         <td>ID</td>
                         <td>Username</td>
                         <td>Password</td>
@@ -24,8 +37,8 @@
                         <td>Actions</td>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr ng-repeat="user in vm.users  | filter:searchText">
+                <tbody >
+                    <tr ng-repeat="user in ctrl.users  | filter:searchText">
                         <td>{{ user.UserID}}</td>
                         <td>{{ user.Username }}</td>
                         <td>{{ user.Password }}</td>
@@ -33,8 +46,8 @@
                         <td>{{ user.Role }}</td>
                         <td>
                             <div class="btn-group" role="group" aria-label="...">
-                                <button ng-if="user.Role =='admin'" class="btn btn-default" ng-click="vm.demote(user.UserID)">Demote&nbsp;</button>
-                                <button ng-if="user.Role =='user'" class="btn btn-default" ng-click="vm.promote(user.UserID)">Promote</button>
+                                <button ng-if="user.Role =='admin'" class="btn btn-default" ng-click="ctrl.demote(user.UserID)">Demote&nbsp;</button>
+                                <button ng-if="user.Role =='user'" class="btn btn-default" ng-click="ctrl.promote(user.UserID)">Promote</button>
                                 <button class="btn btn-default" ng-click="vm.deleteUser(user.UserID)">Delete</button>
                             </div>
                         </td>
@@ -43,5 +56,11 @@
             </table>
         </div>
     </div>
+    <nav>
+        <ul class="pager">
+            <li><a href="" ng-if="ctrl.Prev" ng-click="ctrl.chosePageNr(ctrl.page_nr - 1)">Previous page</a></li>
+            <li><a href="" ng-if="ctrl.Next" ng-click="ctrl.chosePageNr(ctrl.page_nr + 1)">Next page</a></li>
+        </ul>
+    </nav>
 </div>
 
