--- a/AngularClient/index.html
+++ b/AngularClient/index.html
@@ -6,7 +6,6 @@
     <title>Poll App</title>
 
     <!-- Style sheets -->
-    <script src="Scripts/jquery-2.2.1.js"></script>
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Content/sidebar.css" rel="stylesheet" />
     <link href="Content/angular-chart.css" rel="stylesheet" />
@@ -98,11 +97,16 @@
         <div id="sidebar-wrapper" class="mobileSideBarVisible sideBarHidden">
             <ul class="sidebar-nav">
                 <li ng-click="vm.changePage('home')"><a href="/#">Home</a></li>
+                <li ng-click="vm.changePage('contact')"><a href="/#">Contact</a></li>
+                <li ng-click="vm.logout()"><a href="">Log out</a></li>
+                <li><hr></li>
                 <li ng-click="vm.changePage('my_polls')"><a href="/#/my_polls">My polls</a></li>
+                <li ng-click="vm.changePage('search_polls')"><a href="/#/my_polls">Search polls</a></li>
                 <li ng-click="vm.changePage('voted_polls')"><a href="/#/voted_polls">Voted polls</a></li>
                 <li ng-click="vm.changePage('categories')"><a href="/#/categories">Categories</a></li>
                 <li ng-click="vm.changePage('new_poll')"><a href="/#/new_poll">Add new poll</a></li>
-                <li ng-click="vm.logout()"><a href="">Log out</a></li>
+                
+               
             </ul>
 
             <ul ng-if="vm.role == 'admin'" class="sidebar-nav">
@@ -121,6 +125,7 @@
                 <div class="row">
                     <div ng-if="vm.isLoggedIn" class="col-lg-12">
                         <div ng-if="vm.pages.home" ng-include="'app/form/formListView.html'">home</div>
+                        <div ng-if="vm.pages.contact" ng-include="'app/contact/contactView.html'">contact</div>
                         <div ng-if="vm.pages.categories" ng-include="'app/category/categoryUserListView.html'">categories</div>
                         <div ng-if="vm.pages.category_forms" ng-include="'app/formCategory/formCategoryListView.html'">category_forms</div>
                         <div ng-if="vm.pages.my_polls" ng-include="'app/formUser/formListUsersFormsView.html'">my_polls</div>
@@ -138,6 +143,7 @@
     </div>
 
     <!-- Library Scripts -->
+    <script src="Scripts/jquery-2.2.1.js"></script>
     <script src="scripts/angular.js"></script>
     <script src="Scripts/angular-resource.js"></script>
     <script src="Scripts/angular-cookies.js"></script>
@@ -154,6 +160,7 @@
     <script src="common/userAccount.js"></script>
     <script src="common/categoryResource.js"></script>
     <script src="common/formResource.js"></script>
+    <script src="common/contactResource.js"></script>
 
     <!-- Product Controllers -->
     <script src="app/mainController.js"></script>
@@ -165,6 +172,7 @@
     <script src="app/formResult/formResultController.js"></script>
     <script src="app/formVoted/formVotedController.js"></script>
     <script src="app/formCategory/formCategoryController.js"></script>
+    <script src="app/contact/contactController.js"></script>
 </body>
 
 </html>
