--- a/AngularClient/app/contact/contactView.html
+++ b/AngularClient/app/contact/contactView.html
@@ -30,9 +30,8 @@
                         <button class="btn btn-default" type="submit" ng-click="ctrl.sendMessage()">Send message</button>
                     </div>
                 </div>
-                <div ng-if="ctrl.created" class="alert alert-success" role="alert">{{ctrl.messageContact}}</div>
+                <div ng-if="ctrl.sent" class="alert alert-success" role="alert">{{ctrl.messageContact}}</div>
             </div>
         </div>
-        {{ ctrl.contact}}
     </div>
 </div>
