--- a/AngularClient/app/form/formAddView.html
+++ b/AngularClient/app/form/formAddView.html
@@ -62,17 +62,19 @@
                     </div>
                 </div>
 
-
+                <div class="form-group">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                            <div class="btn-group" role="group">
+                                <button class="btn btn-default" ng-click="ctrl.addForm()">Add poll</button>
+                            </div>
+                        </div>
+                        <div ng-if="ctrl.created" class="alert alert-success" role="alert">{{ctrl.messageForm}}</div>
+                    </div>
+                </div>
             </form>
             
-            <div class="col-sm-8 col-sm-offset-2">
-                <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                    <div class="btn-group" role="group">
-                        <button class="btn btn-default" ng-click="ctrl.addForm()">Add poll</button>
-                    </div>
-                 </div>
-                <div ng-if="ctrl.created" class="alert alert-success" role="alert">{{ctrl.messageForm}}</div>
-            </div>
+            
         </div>
     </div>
 </div>
