--- a/AngularClient/app/form/formListAdminView.html
+++ b/AngularClient/app/form/formListAdminView.html
@@ -1,5 +1,4 @@
-﻿
-<div ng-controller="FormController as ctrl">
+﻿<div ng-controller="FormController as ctrl">
     <div class="panel panel-default">
         <div class="panel-heading">Polls per page</div>
         <div class="panel-body">
