--- a/AngularClient/app/formVoted/formVotedListView.html
+++ b/AngularClient/app/formVoted/formVotedListView.html
@@ -12,14 +12,7 @@
         </div>
     </div>
 
-    <div class="panel panel-default">
-        <div class="panel-heading">Search poll</div>
-        <div class="panel-body">
-            <input type="text" ng-model="searchText" class="form-control" placeholder="Search">
-        </div>
-    </div>
-
-       <div ng-repeat="form in ctrl.forms | filter:searchText">
+    <div ng-repeat="form in ctrl.forms">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     Author: {{ form.Username}}
