--- a/AngularClient/app/contact/contactView.html
+++ b/AngularClient/app/contact/contactView.html
@@ -25,10 +25,10 @@
 
 
                 <div class="form-group">
-                    <div class="col-sm-8 col-sm-offset-2">
+                    <div class="col-sm-3 col-sm-offset-2">
                         <div class="btn-group btn-group-justified" role="group" aria-label="...">
                             <div class="btn-group" role="group">
-                                <button class="btn btn-default" type="submit" ng-click="ctrl.sendMessage()">Send message</button>
+                                <button class="btn btn-primary" type="submit" ng-click="ctrl.sendMessage()">Send message</button>
                             </div>
                         </div>
                         <div ng-if="ctrl.sent" class="alert alert-success" role="alert">{{ctrl.messageContact}}</div>
