--- a/AngularClient/app/form/formAddView.html
+++ b/AngularClient/app/form/formAddView.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="FormController as ctrl" >
+﻿<div ng-controller="FormController as ctrl">
     <div class="panel panel-default" ng-controller="CategoryController as cat">
         <div class="panel-heading">Add new poll</div>
         <div class="panel-body">
@@ -33,48 +33,65 @@
                     <div class="form-group">
                         <label class="control-label col-sm-2" for="pwd">Question no. {{question.id}}:</label>
                         <div class="col-sm-8" id="question">
-                            <input type="text" class="form-control" ng-model="question.question" placeholder="Enter a question" required>
+                            <div class="col-sm-11" id="questionString">
+                                <input type="text" class="form-control" ng-model="question.question" placeholder="Enter a question" required>
+                            </div>
+
+                            <div class="btn btn-default" title="Delete question" id="questionDelete" ng-click="ctrl.deleteQuestion(question.id)"> x </div>
                         </div>
-                        <div class="btn btn-default" title="Delete question"  id="questionDelete" ng-click="ctrl.deleteQuestion(question.id)"> x </div>
                     </div>
 
                     <div data-ng-repeat="answer in question.answers">
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="pwd">Answer no. {{answer.id}}:</label>
-                            <div class="col-sm-7"  id="answer">
-                                <input type="text" class="form-control" ng-model="answer.answer" placeholder="Enter an answer" required>
+                            <div class="col-sm-7" id="answer">
+                                <div class="col-sm-11" id="answerString">
+                                    <input type="text" class="form-control" ng-model="answer.answer" placeholder="Enter an answer" required>
 
+                                </div>
+
+                                <div class="btn btn-default" title="Delete answer" id="answerDelete" ng-click="ctrl.deleteAnswer(question.id,answer.id)"> x </div>
                             </div>
-                            <div class="btn btn-default" title="Delete answer" id="answerDelete" ng-click="ctrl.deleteAnswer(question.id,answer.id)"> x </div>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <div class="col-sm-8 col-sm-offset-2">
-                            <div class="btn btn-default" title="Add answer" ng-click="ctrl.addNewAnswer(question.id)">+</div>
+                        <div class="col-sm-3 col-sm-offset-2">
+                            <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                                <div class="btn-group" role="group">
+                                    <button class="btn btn-default" title="Add answer" ng-click="ctrl.addNewAnswer(question.id)">Add answer</button>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
+
                 </div>
 
                 <div class="form-group">
-                    <div class="col-sm-8 col-sm-offset-2">
-                        <button class="btn btn-default" ng-click="ctrl.addNewQuestion()">Add question</button>
+                    <div class="col-sm-3 col-sm-offset-2">
+                        <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                            <div class="btn-group" role="group">
+                                <button class="btn btn-default" ng-click="ctrl.addNewQuestion()">Add question</button>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <div class="col-sm-8 col-sm-offset-2">
+                    <div class="col-sm-4 col-sm-offset-2">
                         <div class="btn-group btn-group-justified" role="group" aria-label="...">
                             <div class="btn-group" role="group">
-                                <button class="btn btn-default" ng-click="ctrl.addForm()">Add poll</button>
+                                <button class="btn btn-primary" ng-click="ctrl.addForm()">Send poll</button>
                             </div>
                         </div>
                         <div ng-if="ctrl.created" class="alert alert-success" role="alert">{{ctrl.messageForm}}</div>
                     </div>
                 </div>
+
             </form>
-            
-            
+
         </div>
     </div>
 </div>
