--- a/AngularClient/index.html
+++ b/AngularClient/index.html
@@ -127,7 +127,7 @@
         <div id="page-content-wrapper" class="contentVisible">
             <div class="container-fluid">
                 <div class="row">
-                    <div ng-if="vm.isLoggedIn" class="col-lg-12">
+                    <div ng-if="vm.isLoggedIn" class="col-sm-12">
                         <div ng-if="vm.pages.home" ng-include="'app/form/formListView.html'">home</div>
                         <div ng-if="vm.pages.contact" ng-include="'app/contact/contactView.html'">contact</div>
                         <div ng-if="vm.pages.categories" ng-include="'app/category/categoryUserListView.html'">categories</div>
