--- a/AngularClient/index.html
+++ b/AngularClient/index.html
@@ -163,6 +163,27 @@
         </div>
     </div>
 
+
+    <div ng-if="$root.isLoadingRegister" class="col-sm-12 loadingGif">
+        <div class="windows8">
+            <div class="wBall" id="wBall_1">
+                <div class="wInnerBall"></div>
+            </div>
+            <div class="wBall" id="wBall_2">
+                <div class="wInnerBall"></div>
+            </div>
+            <div class="wBall" id="wBall_3">
+                <div class="wInnerBall"></div>
+            </div>
+            <div class="wBall" id="wBall_4">
+                <div class="wInnerBall"></div>
+            </div>
+            <div class="wBall" id="wBall_5">
+                <div class="wInnerBall"></div>
+            </div>
+        </div>
+    </div>
+
     <!-- Library Scripts -->
     <script src="Scripts/jquery-2.2.1.js"></script>
     <script src="scripts/angular.js"></script>
