--- a/AngularClient/app/formUser/formListUsersFormsView.html
+++ b/AngularClient/app/formUser/formListUsersFormsView.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="btn btn-default" title="View results" ng-click="vm.changePage(ctrl.changeID(form.Id))">View Results</div>
-                        <div class="btn btn-default" title="Delete poll" ng-click="ctrl.deleteForm(form.Id)">x</div>
+                        <div class="btn btn-default" title="Delete poll" ng-click="ctrl.deleteForm(form.Id)">Delete poll</div>
                        
                     </div>
               
