--- a/AngularClient/app/formVoted/formVotedListView.html
+++ b/AngularClient/app/formVoted/formVotedListView.html
@@ -36,7 +36,7 @@
                     <div class="col-sm-6 col-md-4">
 
                         <div ng-click="">
-                            <a href="#" class="btn btn-default btn-lg" role="button" ng-click="vm.changePage(ctrl.viewResults(form.Id))">View results</a>
+                            <a href="#" class="btn btn-default btnVotedViewResults" role="button" ng-click="vm.changePage(ctrl.viewResults(form.Id))">View results</a>
                         </div>
                        
                 </div>
