--- a/AngularClient/app/contact/contactAdminView.html
+++ b/AngularClient/app/contact/contactAdminView.html
@@ -1,5 +1,5 @@
 ﻿<div ng-controller="ContactController as ctrl">
-    <div class="panel panel-default" ng-controller="UserController as userCtrl">
+    <div class="panel panel-default" ng-controller="UsernameController as userCtrl">
         <div class="panel-heading">Contact Us</div>
         <div class="panel-body">
 
@@ -8,11 +8,11 @@
                     <label class="control-label col-sm-2" for="pwd">To:</label>
                     <div class="col-sm-8">
                         <select class="form-control" ng-model="ctrl.contact.receiver" required>
-                            <option value="{{category.UserID}} " ng-repeat="user in userCtrl.users ">{{ category.Username }}</option>
+                            <option value="{{user.UserID}} " ng-repeat="user in userCtrl.users ">{{ user.Username }}</option>
                         </select>
                     </div>
                 </div>
-
+          
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="pwd">Category:</label>
                     <div class="col-sm-8">
@@ -39,10 +39,14 @@
                                 <button class="btn btn-primary" type="submit" ng-click="ctrl.sendUserMessage()">Send message</button>
                             </div>
                         </div>
-                        <div ng-if="ctrl.sent" class="alert alert-success" role="alert">{{ctrl.messageContact}}</div>
                     </div>
                 </div>
 
+                <div class="form-group">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        <div ng-if="ctrl.sent" class="alert alert-success" role="alert">{{ctrl.messageContact}}</div>
+                    </div>
+                </div>
             </form>
 
 
