--- a/AngularClient/app/contact/contactView.html
+++ b/AngularClient/app/contact/contactView.html
@@ -32,6 +32,12 @@
                                 <button class="btn btn-primary" type="submit" ng-click="ctrl.sendUserMessage()">Send message</button>
                             </div>
                         </div>
+                        
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-sm-8 col-sm-offset-2">
                         <div ng-if="ctrl.sent" class="alert alert-success" role="alert">{{ctrl.messageContact}}</div>
                     </div>
                 </div>
