--- a/AngularClient/app/formResult/formResultView.html
+++ b/AngularClient/app/formResult/formResultView.html
@@ -5,16 +5,16 @@
             <h5>{{ctrl.results.NrVotes}} people have voted</h5>
         </div>
         <div class="panel-body">
-            <form class="form-horizontal">
+            <form class="form-horizontal col-sm-10 pollQuestionPanel">
                 <div data-ng-repeat="question in ctrl.results.Questions">
 
-                    <div class="panel panel-default">
+                    <div class="panel panel-default" >
                         <div class="panel-heading">
-                            <label class="col-sm-offset-2 well col-sm-8" for="pwd">{{question.Question}}</label>
+                           {{question.Question}}
                         </div>
 
                         <div class="panel-body">
-                            <div class="col-sm-offset-2 col-sm-4">
+                            <div class="col-sm-offset-3 col-sm-5">
                                 <canvas id="doughnut" class="chart chart-doughnut" chart-legend="true" chart-data="ctrl.chartResult[question.nrCrt].chartData" chart-labels="ctrl.chartResult[question.nrCrt].chartLabels"></canvas>
                             </div>
                         </div>
@@ -23,10 +23,10 @@
 
             </form>
 
-            <div class="col-sm-8 col-sm-offset-2">
+            <div class="col-sm-4 col-sm-offset-4">
                 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                    <div ng-if="ctrl.voted" class="btn-group" role="group">
-                        <button class="btn btn-default" ng-click="vm.changePage('home')">Return to home</button>
+                    <div class="btn-group" role="group">
+                        <button class="btn btn-primary" ng-click="vm.changePage('home')">Return to home</button>
                     </div>
                 </div>
             </div>
