--- a/AngularClient/app/formVote/formVoteView.html
+++ b/AngularClient/app/formVote/formVoteView.html
@@ -7,19 +7,19 @@
         <div class="panel-body">
             <div ng-if="ctrl.voted && !ctrl.showResults" class="alert alert-success" role="alert">{{ctrl.messageForm}}</div>
 
-            <form class="form-horizontal">
+            <form class="form-horizontal col-sm-10 pollQuestionPanel">
                 <div data-ng-repeat="question in ctrl.detailedForm.Questions">
 
-                    <div class="panel panel-default">
+                    <div class="panel panel-default" ng-if="ctrl.voted == ctrl.showResults">
                         <div class="panel-heading">
-                            <label ng-if="ctrl.voted == ctrl.showResults" class="col-sm-offset-2 well col-sm-8" for="pwd">{{question.Question}}</label>
+                           {{question.Question}}
                         </div>
 
                         <div class="panel-body">
-                            <div ng-hide="ctrl.voted" class="col-sm-offset-3 col-sm-8" ng-repeat="answer in question.Answers">
+                            <div ng-hide="ctrl.voted" class="col-sm-offset-2 col-sm-8" ng-repeat="answer in question.Answers">
                                 <input type="radio" name="{{ question.Answers }}" value="{{ answer.AnswerID }}" ng-model="ctrl.voteForm.answers[question.nrCrt].answer " required> {{ answer.Answer }}<br>
                             </div>
-                            <div ng-if="ctrl.showResults" class="col-sm-offset-2 col-sm-4">
+                            <div ng-if="ctrl.showResults" class="col-sm-offset-3 col-sm-5">
                                 <canvas id="doughnut" class="chart chart-doughnut" chart-legend="true" chart-data="ctrl.chartResult[question.nrCrt].chartData" chart-labels="ctrl.chartResult[question.nrCrt].chartLabels"></canvas>
                             </div>
                         </div>
