--- a/AngularClient/app/form/formAddView.html
+++ b/AngularClient/app/form/formAddView.html
@@ -86,7 +86,13 @@
                                 <button class="btn btn-primary" ng-click="ctrl.addForm()">Send poll</button>
                             </div>
                         </div>
-                        <div ng-if="ctrl.created" class="alert alert-success" role="alert">{{ctrl.messageForm}}</div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        <div ng-if="ctrl.created == 'success'" class="alert alert-success" role="alert">{{ctrl.messageForm}}</div>
+                        <div ng-if="ctrl.created == 'fail'" class="alert alert-danger" role="alert">{{ctrl.messageForm}}</div>
                     </div>
                 </div>
 
