--- a/AngularClient/app/contact/contactView.html
+++ b/AngularClient/app/contact/contactView.html
@@ -44,7 +44,11 @@
                 </div>
                 
             </form>
-
+            <div class="col-sm-2">
+                <div class="btn-group btn-group-justified">
+                     <div class="btn btn-default" ng-click="vm.backPage()">Back</div>
+                </div>
+            </div>
            
         </div>
     </div>
