--- a/AngularClient/app/form/formListView.html
+++ b/AngularClient/app/form/formListView.html
@@ -49,6 +49,10 @@
             </div>
         </div>
     </div>
+    
+    <div class="col-sm-8 col-sm-offset-2">
+        <div show-if="ctrl.message" class="alert alert-info" role="alert">{{ctrl.message}}</div>
+    </div>
 
     <nav>
         <ul class="pager">
