--- a/AngularClient/app/formUser/formListUsersFormsView.html
+++ b/AngularClient/app/formUser/formListUsersFormsView.html
@@ -48,6 +48,10 @@
         </div>
     </div>
 
+    <div class="col-sm-8 col-sm-offset-2">
+        <div show-if="ctrl.message" class="alert alert-info" role="alert">{{ctrl.message}}</div>
+    </div>
+
     <nav>
         <ul class="pager">
             <li><a href="" ng-if="ctrl.Prev" ng-click="ctrl.chosePageNr(ctrl.page_nr - 1)">Previous page</a></li>
