--- a/AngularClient/index.html
+++ b/AngularClient/index.html
@@ -12,10 +12,10 @@
     <link href="Content/loadingGif.css" rel="stylesheet" />
 
 </head>
-<body ng-app="app" ng-controller="MainController as vm" data-ng-init="vm.registerToken()">
+<body ng-app="app" ng-controller="MainController as vm" data-ng-init="vm.registerToken()" class="ng-cloak">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default ">
         <div class="container-fluid">
 
             <div class="mobileNav">
