--- a/AngularClient/app/formUser/formListUsersFormsView.html
+++ b/AngularClient/app/formUser/formListUsersFormsView.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="col-sm-8 col-sm-offset-2">
-        <div show-if="ctrl.message" class="alert alert-info" role="alert">{{ctrl.message}}</div>
+        <div ng-if="ctrl.message" class="alert alert-info" role="alert">{{ctrl.message}}</div>
     </div>
 
     <nav>
