--- a/AngularClient/app/formSearch/formSearchView.html
+++ b/AngularClient/app/formSearch/formSearchView.html
@@ -64,8 +64,11 @@
         </div>
     </div>
 
+    <div class="col-sm-8 col-sm-offset-2">
+        <div ng-if="ctrl.message" class="alert alert-info" role="alert">{{ctrl.message}}</div>
+    </div>
     <nav>
-        <ul class="pager">
+        <ul class="pager col-sm-12">
             <li><a href="" ng-if="ctrl.Prev" ng-click="ctrl.chosePageNr(ctrl.page_nr - 1)">Previous page</a></li>
             <li><a href="" ng-if="ctrl.Next" ng-click="ctrl.chosePageNr(ctrl.page_nr + 1)">Next page</a></li>
         </ul>
