--- a/AngularClient/app/form/formListView.html
+++ b/AngularClient/app/form/formListView.html
@@ -1,14 +1,21 @@
 ﻿<div ng-controller="FormController as ctrl">
-
-    <div class="panel panel-default">
-        <div class="panel-heading">Polls per page</div>
-        <div class="panel-body">
+    <div class="groupPerPagePanel">
+        <div class="col-sm-6">
+            <label class="control-label " for="pwd">Polls per page:</label>
             <select class="form-control" ng-model="ctrl.itemsPerPage" ng-click="ctrl.chosePerPage()" placeholder="Polls per page">
                 <option>1</option>
                 <option>5</option>
                 <option>10</option>
                 <option>15</option>
                 <option>20</option>
+            </select>
+        </div>
+        <div class="col-sm-6 statePanel">
+            <label class="control-label " for="pwd">State:</label>
+            <select class="form-control" ng-model="ctrl.itemsState" ng-click="ctrl.changeState()" placeholder="State">
+                <option>open</option>
+                <option>closed</option>
+                <option>all</option>
             </select>
         </div>
     </div>
@@ -49,12 +56,12 @@
             </div>
         </div>
     </div>
-    
+
     <div class="col-sm-8 col-sm-offset-2">
         <div ng-if="ctrl.message" class="alert alert-info" role="alert">{{ctrl.message}}</div>
     </div>
 
-    <nav >
+    <nav>
         <ul class="pager col-sm-12">
             <li><a href="" ng-if="ctrl.Prev" ng-click="ctrl.chosePageNr(ctrl.page_nr - 1)">Previous page</a></li>
             <li><a href="" ng-if="ctrl.Next" ng-click="ctrl.chosePageNr(ctrl.page_nr + 1)">Next page</a></li>
