--- a/AngularClient/app/user/userListView.html
+++ b/AngularClient/app/user/userListView.html
@@ -1,6 +1,6 @@
 <div ng-controller="UserController as ctrl">
     <div class="panel panel-default">
-        <div class="panel-heading">Polls per page</div>
+        <div class="panel-heading">Users per page</div>
         <div class="panel-body">
             <select class="form-control" ng-model="ctrl.itemsPerPage" ng-click="ctrl.chosePerPage()" placeholder="Polls per page">
                 <option>1</option>
