--- a/AngularClient/footer.html
+++ b/AngularClient/footer.html
@@ -1,45 +1,25 @@
 ﻿<footer class="footer-distributed">
     <div class="footer-left">
-        <h3>Company<span>logo</span></h3>
-        <p class="footer-links">
-            <a href="#">Home</a>
-            ·
-            <a href="#">Blog</a>
-            ·
-            <a href="#">Pricing</a>
-            ·
-            <a href="#">About</a>
-            ·
-            <a href="#">Faq</a>
-            ·
-            <a href="#">Contact</a>
-        </p>
-        <p class="footer-company-name">Company Name &copy; 2015</p>
+
     </div>
-    <div class="footer-center">
-        <div>
-            <i class="fa fa-map-marker"></i>
-            <p><span>21 Revolution Street</span> Paris, France</p>
-        </div>
-        <div>
-            <i class="fa fa-phone"></i>
-            <p>+1 555 123456</p>
-        </div>
-        <div>
-            <i class="fa fa-envelope"></i>
-            <p><a href="mailto:support@company.com">support@company.com</a></p>
+   
+     <div class="footer-center">
+        <h3>VoteMyPoll</h3>
+        <p class="footer-company-name"> Posted by: Miron George &copy; 2016</p>
+      
+          <div>
+            <a href="mailto:george.miron2003@gmail.com"><img src="images/glyphicons-gmail.png" /></a> &nbsp; &nbsp;
+            <a href="https://www.facebook.com/miron.george"> <img src="images/glyphicons-facebook.png" /></a> &nbsp; &nbsp;
+            <a href="https://www.linkedin.com/in/george-miron-48b55469"> <img src="images/glyphicons-linked-in.png" /></a>
         </div>
     </div>
-    <div class="footer-right">
-        <p class="footer-company-about">
-            <span>About the company</span>
-            Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
-        </p>
-        <div class="footer-icons">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-github"></i></a>
-        </div>
+   
+     <div class="footer-right">
+        <h4>  Contact us: </h4>
+        <h4>
+            <img src="images/glyphicons-gmail.png" /> &nbsp;
+            <a href="mailto:votemypoll@gmail.com">votemypoll@gmail.com</a>
+        </h4>
     </div>
+
 </footer>
